# sitrep

./: CHANGELOG.md  Cargo.toml  README.md  renovate.json
.github/workflows/: rust.yml
benches/: criterion.rs  message.rs  partial_report.rs  report.rs  update.rs
examples/: cancel_flat.rs  cancel_nested.rs  hierarchical.rs  message_flat.rs  message_nested.rs  report_flat.rs  report_nested.rs  stand_alone.rs
src/: error.rs  event.rs  generation.rs  lib.rs  observer.rs  priority.rs  progress.rs  report.rs  task.rs
src/progress/: tests.rs
