[package]
name = "sitrep"
description = "Frontend-agnostic progress reporting"
keywords = ["progress", "progress-reporting"]
categories = ["rust-patterns"]
readme = "README.md"
repository = "https://github.com/regexident/sitrep"
homepage = "https://github.com/regexident/sitrep"
documentation = "https://docs.rs/sitrep"
license = "MPL-2.0"
edition = "2021"
rust-version = "1.70.0"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
