[package]
name = "sitrep"
description = "Frontend-agnostic progress reporting"
keywords = ["progress", "progress-reporting"]
categories = ["rust-patterns"]
readme = "README.md"
repository = "https://github.com/regexident/sitrep"
homepage = "https://github.com/regexident/sitrep"
documentation = "https://docs.rs/sitrep"
license = "MPL-2.0"
edition = "2021"
rust-version = "1.71.0"
version = "0.3.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parking_lot = "0.12.2"

[dev-dependencies]
criterion = "0.7.0"

# minimal versions
clap_builder = "=4.5.48" # MSRV <= 1.70.0

# overridden versions
bumpalo = "3.16.0" # yanked: "3.15.0"

[features]
deadlocks-debugger = ["parking_lot/deadlock_detection"]
test-utils = []

[[bench]]
name = "message"
harness = false
required-features = ["test-utils"]

[[bench]]
name = "update"
harness = false
required-features = ["test-utils"]

[[bench]]
name = "report"
harness = false
required-features = ["test-utils"]

[[bench]]
name = "partial_report"
harness = false
required-features = ["test-utils"]
